test/tests/compiler/18_structures/invalid_lex/get_success.etc
fn get_success(none) i32 {
    return 0
}
